---
source: cli/tests/dev_config.rs
expression: "std::str::from_utf8(&output.stdout).unwrap()"
---
This command group contains the commands to interact with the config secrets with bunker

Usage: wukong dev config [OPTIONS] <COMMAND>

Commands:
  push  Push the current configuration changes to the Bunker
  diff  Show changes between the local configuration and the Bunker
  pull  Pull the development config file from Bunker
  lint  Linting the config and show possible warnings, as well as suggestion how to fix the
            config file
  help  Print this message or the help of the given subcommand(s)

Options:
  -v, --verbose...  Use verbos output. More output per occurrence.
                    
                    By default, it'll only report errors.
                    `-v` show warnings
                    `-vv` show info
                    `-vvv` show debug
                    `-vvvv` show trace
  -q, --quiet...    Do not print log message
      --report      Store the debugging log in the log file, which is located at ~/.config/wukong
      --canary      Use the Canary channel API
  -h, --help        Print help
